<resources>
    <string name="app_name">Projekt</string>
    <string name="nie_masz_konta">Nie masz konta?</string>
    <string name="zarejestruj_si">Zarejestruj się!</string>
    <string name="login">Login</string>
    <string name="adres_e_mail">Adres e-mail</string>
    <string name="has_o">Hasło</string>
    <string name="masz_ju_konto">Masz już konto?</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="powt_rz_has_o">Powtórz hasło</string>
    <string name="potrzebujesz_pomocy">Potrzebujesz pomocy?</string>
    <string name="moje_oferty">Moje oferty</string>
    <string name="wy_wietl_oferty">Wyświetl oferty</string>
    <string name="m_j_profil">Mój profil</string>
    <string name="zapomnia_em_has_a">Zapomniałem hasła</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="zapomnia_e_has_a">Zapomniałeś hasła?</string>
    <string name="gotowe">Gotowe</string>
    <string name="oferty">Oferty</string>
    <string name="wiadomo_ci">Wiadomości</string>
    <string name="profil">Profil</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="zmie_ustawienia_aplikacji">Zmień ustawienia aplikacji</string>
    <string name="Oferty">Oferty</string>
    <string name="kontynuuj">Kontynuuj</string>
    <string name="powrot">Powrót</string>
    <string name="miasto">Miasto</string>
    <string name="nr_domu">Nr. d</string>
    <string name="nr_m">Nr. m</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="numer_telefonu">Numer telefonu</string>
    <string name="imi">Imię</string>
    <string name="wyszukaj">Wyszukaj</string>
    <string name="dodaj">Dodaj</string>
    <string name="poniedzia_ek">Poniedziałek</string>
    <string name="badz_dodaj">Bądź dodaj nową ofertę</string>
    <string name="imie2">Imię:</string>
    <string name="nazwisko2">Nazwisko:</string>
    <string name="miasto2">Miasto:</string>
    <string name="user_id">User ID:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="szukaj">Szukaj</string>
    <string name="wpisz_miasto">Wpisz miasto</string>
    <string name="nie_doda_e_adnych_ofert">Nie dodałeś żadnych ofert</string>
    <string name="dodaj_opis_oferty">Dodaj opis oferty</string>
    <string name="title_activity_my_single_ofert">MySingleOfertActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>